
HH-suite 2.0.13  February 2012

* implemented -maxmem option specifying maximum memory to use in GB as float.
  This also affects the maximum number of states to align, thus has an impact
  on speed and accurarcy. The new formula leads to different defaults and
  therefore different results for longer sequences (>7000).

* more sensible memory size defaults init_prefilter(), fixes a segfault

* small fix in hhblitsdb.pl

* Better error messages if databases are too big (e.g. >2GB on 32bit systems).

_______________________________________________________________________________

HH-suite 2.0.12  February 2012

* Reworked SSE flags: Support compilation without SSE3 (make NO_SSE3=1), without 
  SSE2 (make NO_SSE2=1) with SSE4.1 (make WITH_SSE41=1) and enable all other 
  instructions avalable on compilation host (make WITH_NATIVE=1).

* hhblitsdb.pl: The requirement for identical file names and names of master 
  sequences is dropped. Violation of this requirement manifested itself as 
  file-not-found error during Viterbi-stage of hhblits. The code was streamlined.

* Added progress dots ... for prefiltering stage

* Cleaned up output for -v 1 and -v 0 options in hhblits and hhsearch: -v 1 
  should print out only warnings and errors

* Fixed segfault occuring with very long sequence names 

* Minor improvements of documentation on installation

_______________________________________________________________________________

HH-suite 2.0.11  February 2012

* Corrected wrong paths for calls of ffindex binaries in hhblitsdb.pl

* Elminated rare segfault in realignment step that occurred in particular with
  repeat proteins as queries

* Minor improvements of documentation on installatin, HHblits databases, FAQs 
  etc.

_______________________________________________________________________________

HH-suite 2.0.0  January 2012

* The iterative HMM-HMM search method HHblits has been added and the entire 