@@ -18,10 +18,10 @@ EXTERN const int LINELEN=524288; //max length of line read in from input files; 
 EXTERN const int MAXSEQDIS=10238;//max number of sequences stored in 'hit' objects and displayed in output alignment
 EXTERN const int IDLEN=255;     //max length of scop hierarchy id and pdb-id
 EXTERN const int DESCLEN=32765;//max length of sequence description (longname)
-EXTERN const int NAMELEN=PATH_MAX+1; //max length of file names etc., defined in ?.h 
+EXTERN const int NAMELEN=(PATH_MAX>512? PATH_MAX:512); //max length of file names etc., defined in limits.h 
 EXTERN const int MAXOPT=127;   //Maximum number of options to be read in from .hhconfig or command line
 EXTERN const int NAA=20;       //number of amino acids (0-19)
-EXTERN const int NTRANS=7;    //number of transitions recorded in HMM (M2M,M2I,M2D,I2M,I2I,D2M,D2D)
+EXTERN const int NTRANS=7;     //number of transitions recorded in HMM (M2M,M2I,M2D,I2M,I2I,D2M,D2D)
 EXTERN const int NCOLMIN=10;   //min number of cols in subalignment for calculating pos-specific weights w[k][i]
 EXTERN const int ANY=20;       //number representing an X (any amino acid) internally
 EXTERN const int GAP=21;       //number representing a gap internally
