@@ -397,7 +397,20 @@ inline char* sprintg(float val, int w)
 // String utilities
 /////////////////////////////////////////////////////////////////////////////////////
 
-//the integer. If no integer is found, returns INT_MIN and sets ptr to NULL
+// Safe strcpy command that limits copy to a maximum of maxlen characters 
+// (Different from standard strncpy, which pads with \0 characters)
+// Returns maxlen minus the number of non-\0 characters copied
+// If the string is cut prematurely it will return 0! 
+inline int strmcpy(char* dest, const char* source, size_t maxlen)
+{
+  while (*source && (--maxlen)>0) *dest++ = *source++; 
+  *dest = '\0';
+  return maxlen;
+}
+
+// Scans string for integer number starting from ptr and returns this number.
+// The ptr will then be moved to the first position after the integer number.
+// If no integer number is found, it returns INT_MIN and sets ptr to NULL.
 inline int strtoi(const char*& ptr)
 {
     int i;
